{
    "name": "LobbyInputActions",
    "maps": [
        {
            "name": "Lobby",
            "id": "aecb9ded-c269-4234-bdd1-7fb51e764cb6",
            "actions": [
                {
                    "name": "SwapCharacter",
                    "type": "Value",
                    "id": "e839aebf-b07b-4ba3-a9a9-2a2c595aa6a2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ReadyUp",
                    "type": "Button",
                    "id": "d3d749a2-de8c-462e-8a1f-453f0836fb1e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelExitLobby",
                    "type": "Button",
                    "id": "0ec0e154-c282-473d-9e91-b715a88f5b5b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "79dbe5f9-4c5a-4d0c-93e2-599268827b74",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReadyUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a146807b-a097-46d9-b30f-4d6cb8103283",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReadyUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73507b5b-a512-46d7-9bae-33886352d899",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReadyUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "A/D",
                    "id": "d8e9d3a2-0dc2-4706-b84e-9c02bd4c5816",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCharacter",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "6889067c-1098-4320-954f-4fbd5ff42665",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCharacter",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8f1d1aa7-f73b-4964-b974-ce75e54704cb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCharacter",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow Keys",
                    "id": "4498f90c-3b5d-4896-914d-8da0daaf5028",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCharacter",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "2de8cbfa-8cd1-44e0-937d-57a9aadb1c9a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCharacter",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4d2a36fb-be21-4c2b-a9c1-8c64c350fdda",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCharacter",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8c0e1d0f-f3d6-43ba-9aa5-db493d524722",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73d931e8-4cdc-410d-9a5e-69e7811a912e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelExitLobby",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ba1c052-3564-43f0-a69a-7b8875660e8b",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelExitLobby",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f47a1a4-61b8-4de6-83f0-8cec9b212c4b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelExitLobby",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}